--- a/index.html
+++ b/index.html
@@ -12,89 +12,7 @@ window.onload = function()
 }
 </script>
 <title>Zeroeh's Hub</title>
-<style>
-body 
-{
-    background-color: #333333;
-}
-.wizard
-{
-    position:absolute;
-	width:46px;
-	height:46px;
-	animation:moveright 20s infinite;
-	-moz-animation:moveright 20s infinite;
-	-webkit-animation:moveright 20s infinite;
-}
-.rogue
-{
-    position:absolute;
-	width:46px;
-	height:46px;
-	animation:movehome 13s infinite;
-	-moz-animation:movehome 13s infinite;
-	-webkit-animation:movehome 13s infinite;
-}
-.archershoot
-{
-    position:absolute;
-	width:46px;
-	height:46px;
-}
-.doomarrow
-{
-    position:absolute;
-	margin-left:50px;
-	width:28px;
-	height:28px;
-	-moz-transform:rotate(45deg);
-	-webkit-transform:rotate(45deg);
-	animation:moveright .35s infinite;
-	-moz-animation:moveright .35s infinite;
-	-webkit-animation:moveright .35s infinite;
-}
-@-moz-keyframes moveright
-{
-	from
-	{
-        left: 0;
-    }
-    to 
-	{
-        left: 90%;
-    }
-}
-@-webkit-keyframes moveright
-{
-	from
-	{
-        left: 0;
-    }
-    to 
-	{
-        left: 90%;
-    }
-}
-@-moz-keyframes movehome
-{
-	0%
-	{
-		left: 0;
-	}
-	50%
-	{
-		left: 90%;
-		-moz-transform: scaleX(-1);
-		-webkit-transform: scaleX(-1);
-		transform: scaleX(-1);
-		
-	}
-	100%
-	{
-		left: 0;
-	}
-}
-</style>
+<link rel="stylesheet" href="realm.css">
 </head>
 <body>
 <center><p>If you're here for the file downloads, click the wizard!</p></center>
