--- a/index.html
+++ b/index.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-<audio id="bg_music" autoplay="" loop="true" autobuffer="autobuffer" hidden="true">
-<source type="audio/mpeg" src="files/sfx.mp3">
-</audio>
-<script>
-window.onload = function()
-{
-    var backgroundAudio=document.getElementById("bg_music");
-    backgroundAudio.volume=0.4;
-}
-</script>
-<title>Zeroeh's Hub</title>
-<link rel="stylesheet" href="realm.css">
-</head>
-<body>
-<center><p>If you're here for the file downloads, click the wizard!</p></center>
-<a href="http://zeroeh.github.io/downloads.html"><img class="wizard" src="sprites/wizard.gif">
-<br>
-<br>
-<br>
-<a href="http://zeroeh.github.io/zeroehserver.html"><img class="rogue" src="sprites/rogue.gif">
-<br>
-<br>
-<br>
-<a href="http://zeroeh.github.io/credits.html"><img class="archershoot" src="sprites/archershoot.gif">
-<a href="http://zeroeh.github.io/exploits.html"><img class="doomarrow" src="sprites/doomarrow.png">
-</body>
+	<head>
+		<!--
+		<audio id="bg_music" autoplay="" loop="true" autobuffer="autobuffer" hidden="true">
+		<source type="audio/mpeg" src="files/sfx.mp3">
+		</audio>
+		<script>
+		window.onload = function()
+		{
+			var backgroundAudio=document.getElementById("bg_music");
+			backgroundAudio.volume=0.4;
+		}
+		</script>
+		-->
+		<title>Home</title>
+		<link rel="stylesheet" href="realm.css">
+	</head>
+	<body>
+		
+	</body>
 </html>
